MAINTENANCE downgrade to java 8 due to Ignite 2.7.0